[gd_scene load_steps=7 format=3 uid="uid://c5mjt2raln2ku"]

[ext_resource type="Script" uid="uid://coi4l71qjrupr" path="res://scene/IntroScreen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cvu22piyhrfbh" path="res://Image/UI/IntroSceneBackground2.png" id="2"]
[ext_resource type="Theme" uid="uid://c8otso07yd5di" path="res://Image/UI/BloodButtonCompleted.tres" id="3"]
[ext_resource type="FontFile" uid="uid://cdmjka5obhjpa" path="res://Cinzel-VariableFont_wght.ttf" id="4"]
[ext_resource type="PackedScene" uid="uid://bfwgwwfsgi7ko" path="res://scene/WordsInputPanel.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://fwr66jce628v" path="res://scene/LoginUI.tscn" id="6"]

[node name="IntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1

[node name="ButtonMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -84.5
offset_right = 75.0
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NewCharacterButton" type="Button" parent="ButtonMenu"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
text = "New Character"
icon_alignment = 1

[node name="LoadCharacterButton" type="Button" parent="ButtonMenu"]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
text = "Load Character"

[node name="StorytellerButton" type="Button" parent="ButtonMenu"]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
text = "Storyteller"

[node name="NetworkManager" type="Node" parent="."]

[node name="WordsInputPanel" parent="." instance=ExtResource("5")]
visible = false
layout_mode = 1
offset_left = -416.0
offset_top = -190.0
offset_right = -416.0
offset_bottom = -190.0

[node name="LoginUI" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 1
